--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -1,3 +1,74 @@
-<h1>
-  {{title}}
-</h1>
+<!-- 顶部导航 -->
+<div class="navbar navbar-default navbar-fixed-top main-nav" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle Navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="posts" class="navbar-brand navbar-brand-my">
+        NiceFish
+      </a>
+    </div>
+    <div class="collapse navbar-collapse" aria-expanded="false">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="posts">{{"app.welcome" | translate}}</a>
+        </li>
+        <li class="dropdown">
+          <a href="echart">集成图表</a>
+        </li>
+        <li class="dropdown">
+          <a href="map">高德地图</a>
+        </li>
+        <li class="dropdown">
+          <a href="jquery">集成jQuery</a>
+        </li>
+        <li class="dropdown">
+          <a href="jsplumb">集成jsplumb</a>
+        </li>
+        <li class="dropdown">
+          <a href="http://git.oschina.net/mumu-osc/NiceFish" data-toggle="dropdown" class="dropdown-toggle" target="_blank">NiceFish</a>
+        </li>
+        <li class="dropdown">
+          <a href="http://git.oschina.net/zt_zhong/CodeBe" data-toggle="dropdown" class="dropdown-toggle" target="_blank">CodeBe</a>
+        </li>
+      </ul>
+      <!--<ul *ngIf="!currentUser?.userName" class="nav navbar-nav navbar-right">-->
+        <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
+          <!--<a routerLink="login">{{'app.login' | translate}}</a>-->
+        <!--</li>-->
+        <!--<li routerLinkActive="active">-->
+          <!--<a routerLink="register">{{'app.register' | translate}}</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+      <!--<ul *ngIf="currentUser?.userName" class="nav navbar-nav navbar-right">-->
+        <!--<li routerLinkActive="active">-->
+          <!--<a routerLink="user">{{'app.welcome' | translate}}：{{currentUser?.userName}}</a>-->
+        <!--</li>-->
+        <!--<li routerLinkActive="active">-->
+          <!--<a routerLink="manage">{{'app.console' | translate}}</a>-->
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a href="javascript:void(0);" (click)="doLogout()">{{'app.logout' | translate}}</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+    </div>
+  </div>
+</div>
+<!-- 主体内容区域 -->
+<div class="container main-container">
+  <!--<router-outlet></router-outlet>-->
+</div>
+<!-- 底部区域 -->
+<div class="footer bs-footer">
+  <div class="container">
+    <div class="row">
+      <p>
+        Powered by <a href="http://git.oschina.net/mumu-osc/NiceFish" target="_blank">NiceFish</a>
+      </p>
+    </div>
+  </div>
+</div>
