--- a/angular4/src/app/post/write-post/write-post.component.html
+++ b/angular4/src/app/post/write-post/write-post.component.html
@@ -1,1 +1,9 @@
+<!--<textarea id="post_editor" class="form-control" rows="20" placeholder="内容，最少140字，最多2万字。图片每张最大500K，每篇文章最多50张图。"></textarea>-->
+<div class="row">
+  <div class="col-sm-12">
+    <div id="editormd">
+      <textarea style="display:none;">### Hello Editor.md !</textarea>
+    </div>
+  </div>
+</div>
 
