--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 <!-- 主体内容区域 -->
-<div class="container main-container">
+<div class="container-fluid main-container">
   <router-outlet></router-outlet>
 </div>
 <!-- 底部区域 -->
