--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -18,10 +18,10 @@
           <a routerLink="posts">{{"app.articles" | translate}}</a>
         </li>
       </ul>
-      <!--<ul *ngIf="!currentUser?.userName" class="nav navbar-nav navbar-right">-->
-        <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
-          <!--<a routerLink="login">{{'app.login' | translate}}</a>-->
-        <!--</li>-->
+      <ul class="nav navbar-nav navbar-right">
+        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <a (click)="login()">{{'app.login' | translate}}</a>
+        </li>
         <!--<li routerLinkActive="active">-->
           <!--<a routerLink="register">{{'app.register' | translate}}</a>-->
         <!--</li>-->
@@ -36,7 +36,7 @@
         <!--<li>-->
           <!--<a href="javascript:void(0);" (click)="doLogout()">{{'app.logout' | translate}}</a>-->
         <!--</li>-->
-      <!--</ul>-->
+      </ul>
     </div>
   </div>
 </div>
