--- a/angular4/src/app/post/postlist/postlist.component.html
+++ b/angular4/src/app/post/postlist/postlist.component.html
@@ -29,6 +29,8 @@
         </p>
       </div>
       <!--<pagination [totalItems]="totalItems" [maxSize]="maxSize" [itemsPerPage]="itemsPerPage" [(ngModel)]="currentPage" firstText="{{'firstPage' | translate}}" lastText="{{'lastPage' | translate}}" previousText="{{'previousPage' | translate}}" nextText="{{'nextPage' | translate}}" [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" class="pagination-sm"></pagination>-->
+      <pagination [totalItems]="totalItems" [(ngModel)]="currentPage" [maxSize]="maxSize" class="pagination-sm"
+                  (pageChanged)="pageChanged($event)" [boundaryLinks]="true" [rotate]="false" (numPages)="numPages = $event"></pagination>
     </div>
   </div>
 </div>
