新增图片上传（七牛云存储）

--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -45,7 +45,7 @@
   <router-outlet></router-outlet>
 </div>
 <!-- 底部区域 -->
-<div class="footer bs-footer">
+<div class="footer">
   <div class="container">
     <div class="row">
       <p>
