--- a/angular4/src/app/post/write-post/write-post.component.html
+++ b/angular4/src/app/post/write-post/write-post.component.html
@@ -1,24 +1,78 @@
 <!--<textarea id="post_editor" class="form-control" rows="20" placeholder="内容，最少140字，最多2万字。图片每张最大500K，每篇文章最多50张图。"></textarea>-->
-<div class="row">
+<div class="container-fluid">
   <div class="col-sm-12 col-md-12 col-lg-12">
-    <form #postForm="ngForm" novalidate role="form">
+    <form #postForm="ngForm" novalidate role="form" class="form-horizontal">
       <div class="form-group col-sm-9 col-md-9 col-lg-10">
         <input type="text" class="form-control" placeholder="标题，2到32个字符" required minlength="2" maxlength="32"
                #title="ngModel" [(ngModel)]="post.title" name="title">
         <div *ngIf="!firstSubmit && !title.valid" class="alert alert-warning">标题必须是2到32个字符</div>
       </div>
       <div class="form-group col-sm-3 col-md-3 col-lg-2">
-        <button id="save" type="button" (click)="save(postForm)" [disabled]="saveDisabled" class="btn btn-success">
+        <button id="save" type="button" (click)="save(postForm)" [disabled]="!canSave || !title.valid" class="btn btn-success">
           <span class="fa fa-save" aria-hidden="true"></span>
           保存
         </button>
-        <button type="button" (click)="save(postForm)" class="btn btn-success">
+        <button id="publish" type="button" (click)="publish(postForm)" [disabled]="!title.valid" class="btn btn-success">
           <span class="fa fa-share" aria-hidden="true"></span>
           发布
         </button>
       </div>
       <div id="editormd" class="form-group">
-        <textarea style="display:none;" name="content" required></textarea>
+        <textarea style="display:none;" name="content">
+
+“永远年轻，永远热泪盈眶”
+
+当你试图放弃一个你知道是正确的事情的时候,希望你能再看看这句话。
+
+——《我的奋斗》
+
+
+面对挫折、不要愤怒、不要抗议，
+
+只管埋头默默擦亮你的武器，准备下一次的战斗。
+
+我们是做事的，不是要给人家看某种表情的。
+
+——《我的奋斗》
+</textarea>
+      </div>
+      <!--模态框-->
+      <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-md">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title pull-left">文章设置</h4>
+              <button type="button" class="close pull-right" (click)="lgModal.hide()" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label class="col-sm-2 control-label">文章类型</label>
+                <div class="col-sm-10">
+                  <select class="form-control" [(ngModel)]="post.postType" name="postType">
+                    <option value="0">原创</option>
+                    <option value="1">转载</option>
+                    <option value="2">翻译</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-sm-2 control-label">文章分类</label>
+                <div class="col-sm-10">
+                  <select class="form-control" [(ngModel)]="post.category.id" name="category">
+                    <option *ngFor="let category of categories; let index=index" value="{{category.id}}">{{category.categoryName}}</option>
+                  </select>
+                </div>
+              </div>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-success" aria-label="Close" (click)="lgModal.hide()">确定</button>
+            </div>
+          </div>
+        </div>
       </div>
     </form>
   </div>
