--- a/angular4/src/styles.css
+++ b/angular4/src/styles.css
@@ -6,13 +6,16 @@
 }
 
 body {
+  overflow: auto;
   font-family: '微软雅黑', Microsoft YaHei, '宋体', Tahoma, Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  background: url("assets/images/bg.png") no-repeat center top;
+  background-size:105%;
 }
 
 html {
   min-height: 100%;
   position: relative;
-  padding-bottom: 162px;
+  padding-bottom: 70px;
 }
