--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -26,7 +26,7 @@
       <ul *ngIf="currentUser?.id" class="nav navbar-nav navbar-right">
         <li routerLinkActive="myActive">
           <a class="navbar-brand" href="javascript:void(0);" style="padding: 10px;">
-            <img [src]="currentUser?.figureUrl" alt="头像" class="img-circle">
+            <img [src]="currentUser?.avatarURL30" alt="头像" class="img-circle">
           </a>
         </li>
         <li class="dropdown">
