--- a/angular4/src/app/post/post-detail-main/post-detail-main.component.html
+++ b/angular4/src/app/post/post-detail-main/post-detail-main.component.html
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9 preview">
-      <app-post-detail></app-post-detail>
+      <app-post-detail [parentPost]="post"></app-post-detail>
+      <app-comment [parentPostId]="post.id" [enableComment]="post?.enableComment"></app-comment>
     </div>
     <div class="col-sm-3">
-      <!--<app-user-info panelTitle="作者信息" (follow)="doFollow()"></app-user-info>-->
+      <app-user-info panelTitle="{{'user.authorinfo' | translate}}"  [readTimes]="post?.readTimes" [commentTimes]="post?.commentTimes" [user]="post.user"></app-user-info>
     </div>
   </div>
 </div>
