--- a/angular4/src/app/comment/comment.component.html
+++ b/angular4/src/app/comment/comment.component.html
@@ -1,5 +1,5 @@
 <div class="post-detail-container">
-  <app-add-comment *ngIf="enableComment" [postId]="postId" (onComment)="reload()"></app-add-comment>
+  <app-add-comment *ngIf="enableComment" [reName]="replayData" [postId]="postId" (onComment)="reload()"></app-add-comment>
   <div  *ngIf="!enableComment" style="text-align: center">
     <h4>**博主已经关闭了评论功能**</h4>
   </div>
@@ -15,8 +15,31 @@
             <img [src]="comment.user?.avatarURL50" alt="头像" class="img-circle">
           </div>
           <div class="col-xs-10 col-sm-11 col-md-11">
-            <p class="commenter"><b>{{comment.user?.nickName}}</b>&nbsp;&nbsp;{{comment.commentTime | date:'yyyy-MM-dd HH:mm:ss'}}</p>
-            <h5 style="line-height: 1.3">{{comment.content}}</h5>
+            <div class="row">
+              <div class="col-xs-9 col-sm-10 col-md-10 commenter">
+                <b>{{comment.user?.nickName}}</b>
+                <span *ngIf="currentUser && comment.user && currentUser.id===comment.user.id" class="label label-success">
+                  {{'comment.author'|translate}}
+                </span>
+                &nbsp;&nbsp;
+                {{comment.commentTime | date:'yyyy-MM-dd HH:mm:ss'}}
+              </div>
+              <div *ngIf="hasLogin && enableComment" class="col-xs-3 col-sm-2 col-md-2">
+                <a (click)="deleteComment(comment)" *ngIf="currentUser && comment.user && currentUser.id===comment.user.id"
+                   href="javascript:void(0);">
+                  <i class="fa fa-trash-o" title="{{'comment.delete'|translate}}"></i>
+                </a>&nbsp;
+                <a (click)="replay(comment.user.nickName)" href="javascript:void(0);">
+                  <i class="fa fa-reply" title="{{'comment.replay'|translate}}"></i>
+                </a>
+              </div>
+            </div>
+            <h5 style="line-height: 1.3">
+              <span *ngIf="comment.reName && comment.reName.length>0" class="replay">
+                <b>@{{comment.reName}}&nbsp;</b>
+              </span>
+              {{comment.content}}
+            </h5>
           </div>
         </div>
       </div>
