--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -24,10 +24,10 @@
         </li>
       </ul>
       <ul *ngIf="currentUser?.id" class="nav navbar-nav navbar-right">
-        <li routerLinkActive="myActive">
-          <a class="navbar-brand" href="javascript:void(0);" style="padding: 10px;">
+        <li style="padding: 10px;">
+          <!--<a class="navbar-brand" href="javascript:void(0);" style="padding: 10px;">-->
             <img [src]="currentUser?.avatarURL30" alt="头像" class="img-circle">
-          </a>
+          <!--</a>-->
         </li>
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{currentUser?.nickName}}<span class="caret"></span></a>
