--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -32,7 +32,7 @@
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{currentUser?.nickName}}<span class="caret"></span></a>
           <ul class="dropdown-menu my-menu" style="background-color: #6f5499;">
-            <li routerLinkActive="myActive"><a routerLink="user">{{'app.explore' | translate}}</a></li>
+            <li routerLinkActive="myActive"><a routerLink="manage">{{'app.explore' | translate}}</a></li>
             <li routerLinkActive="myActive"><a href="javascript:void(0);" (click)="doLogout()">{{'app.logout' | translate}}</a></li>
           </ul>
         </li>
