--- a/angular4/src/app/home/category/category.component.html
+++ b/angular4/src/app/home/category/category.component.html
@@ -4,7 +4,9 @@
       <h3 class="panel-title">文章分类</h3>
     </div>
     <div class="list-group">
-      <a class="list-group-item" *ngFor="let category of categories; let index=index" (click)="onSelectCategory(category)">
+      <a class="list-group-item" *ngFor="let category of categories; let index=index"
+         routerLinkActive="list-group-item-success" routerLink="/posts/page" [queryParams]="{categoryId:category.id,page:1}"
+         >
         {{category.categoryName}}
         <span class="badge">{{category.postSize}}</span>
       </a>
