--- a/angular4/src/app/post/write-post/write-post.component.html
+++ b/angular4/src/app/post/write-post/write-post.component.html
@@ -7,33 +7,23 @@
                #title="ngModel" [(ngModel)]="post.title" name="title">
         <div *ngIf="!firstSubmit && !title.valid" class="alert alert-warning">标题必须是2到32个字符</div>
       </div>
-      <div class="form-group col-sm-3 col-md-3 col-lg-2">
-        <button id="save" type="button" (click)="save(postForm)" [disabled]="!canSave || !title.valid" class="btn btn-success">
+      <div class="form-group col-sm-3 col-md-3 col-lg-2" style="padding:auto">
+        <button *ngIf="!editable" type="button" (click)="save()" [disabled]="!canSave || !title.valid" class="btn btn-success">
           <span class="fa fa-save" aria-hidden="true"></span>
           保存
         </button>
-        <button id="publish" type="button" (click)="publish(postForm)" [disabled]="!title.valid" class="btn btn-success">
+        <button *ngIf="!editable" type="button" (click)="publish()" [disabled]="!title.valid" class="btn btn-success">
           <span class="fa fa-share" aria-hidden="true"></span>
           发布
+        </button>
+        <button *ngIf="editable" type="button" (click)="saveEdit()" [disabled]="!title.valid" class="btn btn-success">
+          <span class="fa fa-save" aria-hidden="true"></span>
+          保存
         </button>
       </div>
       <div id="editormd" class="form-group">
         <textarea style="display:none;" name="content">
-
-“永远年轻，永远热泪盈眶”
-
-当你试图放弃一个你知道是正确的事情的时候,希望你能再看看这句话。
-
-——《我的奋斗》
-
-
-面对挫折、不要愤怒、不要抗议，
-
-只管埋头默默擦亮你的武器，准备下一次的战斗。
-
-我们是做事的，不是要给人家看某种表情的。
-
-——《我的奋斗》
+{{post.postContent}}
 </textarea>
       </div>
       <!--模态框-->
@@ -56,8 +46,17 @@
                     <option value="2">翻译</option>
                   </select>
                 </div>
-              </div>
 
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label">开启评论</label>
+                <div class="col-sm-10">
+                  <select class="form-control" [(ngModel)]="post.enableComment" name="enableComment">
+                    <option value=true>开启</option>
+                    <option value=false>关闭</option>
+                  </select>
+                </div>
+              </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">文章分类</label>
                 <div class="col-sm-10">
