--- a/angular4/src/app/post/postlist/postlist.component.html
+++ b/angular4/src/app/post/postlist/postlist.component.html
@@ -27,7 +27,7 @@
         </h4>
         <div class="row info">
           <div class="col-xs-4 col-sm-2 col-md-2">
-            <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;{{post.commentTimes}}
+            <i class="fa fa-commenting-o" aria-hidden="true"></i>&nbsp;{{post.commentTimes}}
           </div>
           <div class="col-xs-8 col-sm-2 col-md-2">
             <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;{{post.readTimes}}
