添加会话统计面板

--- a/angular4/src/app/home/home.component.html
+++ b/angular4/src/app/home/home.component.html
@@ -6,6 +6,7 @@
     </div>
     <div class="col-sm-3">
       <app-category></app-category>
+      <app-sitestat></app-sitestat>
     </div>
   </div>
 </div>
