完成评论管理功能

--- a/angular4/src/app/home/category/category.component.html
+++ b/angular4/src/app/home/category/category.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="panel panel-default">
+  <div class="panel panel-warning">
     <div class="panel-heading">
       <h3 class="panel-title">文章分类</h3>
     </div>
