--- a/angular4/src/app/sitestat/sitestat.component.html
+++ b/angular4/src/app/sitestat/sitestat.component.html
@@ -1,5 +1,5 @@
 <div class="site-stat-container">
-  <div class="panel panel-default">
+  <div class="panel panel-warning">
     <div class="panel-heading">
       <h3 class="panel-title">{{currentTime | date:'yyyy-MM-dd HH:mm:ss'}}</h3>
     </div>
