--- a/angular4/src/app/manage/category-table/category-table.component.html
+++ b/angular4/src/app/manage/category-table/category-table.component.html
@@ -1,3 +1,35 @@
-<p>
-  category-table works!
-</p>
+<p-dataTable [value]="categories" selectionMode="single" [(selection)]="selectedCategory"
+             (onRowSelect)="onRowSelect($event)" [paginator]="true" [responsive]="true"
+             [lazy]="true" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,50]"
+             [totalRecords]="totalRecords" (onLazyLoad)="loadCategoriesLazy($event)">
+  <p-header>文章分类管理</p-header>
+  <p-column field="id" header="ID" [style]="setStyles()"></p-column>
+  <p-column field="categoryName" header="类别描述" [style]="setStyles()"></p-column>
+  <p-column field="desc" header="显示顺序" [style]="setStyles()"></p-column>
+  <p-footer>
+    <div class="ui-helper-clearfix" style="width:100%">
+    <button type="button" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="{{'add'|translate}}">
+    </button>
+    </div>
+  </p-footer>
+</p-dataTable>
+
+
+<p-dialog header="分类详情" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
+  <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="category">
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4"><label for="categoryName">分类描述</label></div>
+      <div class="ui-grid-col-8"><input pInputText id="categoryName" [(ngModel)]="category.categoryName" /></div>
+    </div>
+    <div class="ui-grid-row" style="margin-top: 20px">
+      <div class="ui-grid-col-4"><label for="desc">显示顺序</label></div>
+      <div class="ui-grid-col-8"><input type="number" pInputText id="desc" [(ngModel)]="category.desc" /></div>
+    </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="fa-close" (click)="delete()" label="{{'delete'|translate}}"></button>
+      <button type="button" pButton icon="fa-check" (click)="save()" label="{{'submit'|translate}}"></button>
+    </div>
+  </p-footer>
+</p-dialog>
