--- a/angular4/src/app/app.component.html
+++ b/angular4/src/app/app.component.html
@@ -45,12 +45,8 @@
   <router-outlet></router-outlet>
 </div>
 <!-- 底部区域 -->
-<div class="footer">
-  <div class="container">
-    <div class="row">
+<div class="myfooter">
       <p>
-        Powered by <a href="https://github.com/mahui53541/blog" target="_blank">MyBlog</a>
+        Copyright © 2017 苏ICP备17009837号-1 &nbsp;&nbsp;&nbsp;&nbsp;Powered by <a href="https://github.com/mahui53541/blog" target="_blank">MyBlog</a>
       </p>
-    </div>
-  </div>
 </div>
