--- a/angular4/src/app/home/home.component.html
+++ b/angular4/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [@flyIn]="'in'">
   <div class="row">
     <div class="col-sm-9">
       <!--这里是左侧动态加载的内容-->
