--- a/angular4/src/app/post/post-detail-main/post-detail-main.component.html
+++ b/angular4/src/app/post/post-detail-main/post-detail-main.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [@fadeIn]="'in'">
   <div class="row">
     <div class="col-sm-9 preview">
       <app-post-detail [parentPost]="post"></app-post-detail>
